tests/suite/manifests/hello/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "hello.example.com"
  rules:
  - matches:
    - path:
        type: Exact
        value: /hello
    backendRefs:
    - name: hello
      port: 80
